hero section and first section done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influence-gear</title>
-</head>
-<body>
-    <h1>it is working</h1>
-</body>
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- javascript -->
+    <script
+      src="https://kit.fontawesome.com/24b38608d4.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- hero section -->
+    <header>
+      <nav>
+        <div class="container">
+          <div class="logo-name">
+            <h1>Influencer Products</h1>
+          </div>
+
+          <div class="navs">
+            <ul>
+              <li>Home</li>
+              <li>Products</li>
+              <li>Sign Up</li>
+              <li>Log In</li>
+              <i class="fa fa-magnifying-glass icon"></i>
+              <i class="fa-solid fa-cart-shopping icon fa-shake"></i>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Body section -->
+      <div class="container">
+        <div class="half-width first-section">
+          <h1>Start your Journey as Influencer</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
+            possimus hic harum ducimus laboriosam non!
+          </p>
+
+          <button class="book">
+            <p>Prebook now</p>
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="half-width">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </div>
+
+      <!-- section 1 -->
+
+      <!-- section 2 -->
+
+      <!-- popular collection -->
+
+      <!-- featured products -->
+    </main>
+
+    <!--  -->
+  </body>
+
+  <footer></footer>
+  <!-- footer -->
 </html>
