popular collection half done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-      <!-- Body section -->
+      <!-- section 1 -->
       <div class="container">
         <div class="half-width first-section">
           <h1>Start your Journey as Influencer</h1>
@@ -58,11 +58,187 @@
         </div>
       </div>
 
-      <!-- section 1 -->
-
-      <!-- section 2 -->
+      <!-- affliated companies -->
+      <div class="companies">
+        <div class="container">
+          <object data="logos/Alibaba.svg" type=""></object
+          ><object data="logos/Amazon.svg" type=""></object
+          ><object data="logos/Daraz.pk Logo.svg" type=""></object
+          ><object data="logos/Ebay.svg" type=""></object
+          ><object data="logos/Rakuten.svg" type=""></object
+          ><object data="logos/Target.svg" type=""></object
+          ><object data="logos/Walmart.svg" type=""></object>
+        </div>
+      </div>
 
       <!-- popular collection -->
+
+      <div class="popular-collection">
+        <h1>popular collection</h1>
+        <div class="collections">
+          <div class="card">
+            <img src="images/action.png" alt="" />
+            <p class="title">title-1</p>
+            <p class="price">100</p>
+
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
+              nisi?
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/airpod.png" alt="" />
+            <p class="title">title-2</p>
+            <p class="price">200</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Velit debitis consequuntur ex minima aut! Inventore distinctio
+              rerum voluptatibus?
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <p class="title">title-3</p>
+            <p class="price">300</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>Commodi iure natus a? Magni at ipsam eligendi blanditiis eum.</p>
+          </div>
+          <div class="card">
+            <img src="images/drone.png" alt="" />
+            <p class="title">title-4</p>
+            <p class="price">400</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Sunt in corporis mollitia nostrum, eius dicta veniam quidem illum!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/tripod.png" alt="" />
+            <p class="title">title-5</p>
+            <p class="price">500</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Consequuntur ipsa odio unde natus error ratione quaerat dolores
+              doloribus.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/lights.png" alt="" />
+            <p class="title">title-6</p>
+            <p class="price">600</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Itaque iusto esse dignissimos quibusdam, mollitia explicabo sunt
+              reprehenderit. Delectus?
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/mic.png" alt="" />
+            <p class="title">title-7</p>
+            <p class="price">700</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Adipisci, explicabo aperiam doloribus reprehenderit assumenda nam
+              eos aliquam tempora.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/setup.png" alt="" />
+            <p class="title">title-8</p>
+            <p class="price">800</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>Adipisci tempore ut sequi aperiam eius maiores, sed aut a.</p>
+          </div>
+          <div class="card">
+            <img src="images/single-light.png" alt="" />
+            <p class="title">title-9</p>
+            <p class="price">900</p>
+            <div class="ratings">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-regular fa-star-half-stroke"></i>
+              <p>4.99</p>
+            </div>
+
+            <p>
+              Vel repellendus ratione enim placeat sint. Quisquam exercitationem
+              eum fugit.
+            </p>
+          </div>
+        </div>
+
+        <div class="see-more">
+          <p>See More</p>
+          <i class="fas fa-arrow-right"></i>
+        </div>
+      </div>
 
       <!-- featured products -->
     </main>
