gradiant line fixed

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
       <!-- affliated companies -->
       <div class="companies">
+        <div class="line"></div>
         <div class="container">
           <object data="logos/Alibaba.svg" type=""></object
           ><object data="logos/Amazon.svg" type=""></object
@@ -69,6 +70,7 @@
           ><object data="logos/Target.svg" type=""></object
           ><object data="logos/Walmart.svg" type=""></object>
         </div>
+        <div class="line"></div>
       </div>
 
       <!-- popular collection -->
