responsive-half-done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <header>
       <nav>
         <div class="container">
+          <i class="fa-solid fa-bars menu"></i>
           <div class="logo-name">
             <h1>Influencer Products</h1>
           </div>
@@ -31,8 +32,9 @@
               <li>Sign Up</li>
               <li>Log In</li>
               <i class="fa fa-magnifying-glass icon"></i>
-              <i class="fa-solid fa-cart-shopping icon fa-shake"></i>
+              
             </ul>
+            <i class="fa-solid fa-cart-shopping icon fa-shake"></i>
           </div>
         </div>
       </nav>
@@ -40,7 +42,7 @@
 
     <main>
       <!-- section 1 -->
-      <div class="container">
+      <div class="container mobile-container">
         <div class="half-width first-section">
           <h1>Start your Journey as Influencer</h1>
           <p class="description">
@@ -61,7 +63,7 @@
       <!-- affliated companies -->
       <div class="companies">
         <div class="line"></div>
-        <div class="container">
+        <div class="container partners">
           <object data="logos/Alibaba.svg" type=""></object
           ><object data="logos/Amazon.svg" type=""></object
           ><object data="logos/Daraz.pk Logo.svg" type=""></object
@@ -81,7 +83,7 @@
           <div class="card">
             <img src="images/action.png" alt="" />
             <p class="title">title-1</p>
-            <p class="price">100</p>
+            <p class="price">$100.00</p>
 
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
@@ -100,7 +102,7 @@
           <div class="card">
             <img src="images/airpod.png" alt="" />
             <p class="title">title-2</p>
-            <p class="price">200</p>
+            <p class="price">$200.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -118,7 +120,7 @@
           <div class="card">
             <img src="images/camera.png" alt="" />
             <p class="title">title-3</p>
-            <p class="price">300</p>
+            <p class="price">$300.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -133,7 +135,7 @@
           <div class="card">
             <img src="images/drone.png" alt="" />
             <p class="title">title-4</p>
-            <p class="price">400</p>
+            <p class="price">$400.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -150,7 +152,7 @@
           <div class="card">
             <img src="images/tripod.png" alt="" />
             <p class="title">title-5</p>
-            <p class="price">500</p>
+            <p class="price">$500.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -168,7 +170,7 @@
           <div class="card">
             <img src="images/lights.png" alt="" />
             <p class="title">title-6</p>
-            <p class="price">600</p>
+            <p class="price">$600.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -186,7 +188,7 @@
           <div class="card">
             <img src="images/mic.png" alt="" />
             <p class="title">title-7</p>
-            <p class="price">700</p>
+            <p class="price">$700.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -204,7 +206,7 @@
           <div class="card">
             <img src="images/setup.png" alt="" />
             <p class="title">title-8</p>
-            <p class="price">800</p>
+            <p class="price">$800.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -213,13 +215,12 @@
               <i class="fa-regular fa-star-half-stroke"></i>
               <p>4.99</p>
             </div>
-
-            <p>Adipisci tempore ut sequi aperiam eius maiores, sed aut a.</p>
+            <p     >Adipisci tempore ut sequi aperiam eius maiores, sed aut a.</p>
           </div>
           <div class="card">
             <img src="images/single-light.png" alt="" />
             <p class="title">title-9</p>
-            <p class="price">900</p>
+            <p class="price">$1200.00</p>
             <div class="ratings">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
